--- a/Unit02/40461_Mod02_Project2.ipynb
+++ b/Unit02/40461_Mod02_Project2.ipynb
@@ -66,17 +66,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 57,
       "metadata": {
         "collapsed": true,
         "trusted": false
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Look at all the animals ['cat', 'dog', 'horse', 'goat']\n",
+            "goat Popped from list\n",
+            "Look at all the animals ['cat', 'dog', 'horse']\n",
+            "Goodbye\n",
+            "Goodbye\n"
+          ]
+        }
+      ],
       "source": [
         "# [] create list-o-matic\n",
         "\n",
+        "animals = [\"cat\", \"dog\", \"horse\", \"goat\"]\n",
         "\n",
         "\n",
+        "\n",
+        "def list_o_matic():\n",
+        "    while animals:\n",
+        "        ani = input(\"name a animal, 'quit' to exit\")\n",
+        "        if ani.lower() == \"quit\":\n",
+        "            print(\"Look at all the animals\", animals)\n",
+        "            break\n",
+        "        else:\n",
+        "            if ani == \"\":\n",
+        "                print(\"Look at all the animals\", animals)\n",
+        "                print(animals[len(animals)-1], \"Popped from list\")\n",
+        "                animals.pop()\n",
+        "            elif ani in animals:\n",
+        "                print(\"Look at all the animals\", animals)\n",
+        "                animals.remove(ani)\n",
+        "                print(ani, \"Removed from list\")\n",
+        "            else:\n",
+        "                print(\"Look at all the animals\", animals)\n",
+        "                animals.append(ani)\n",
+        "                print(ani, \"Append to list\")\n",
+        "\n",
+        "list_o_matic()\n",
+        "print(\"Goodbye\")\n",
         "\n"
       ]
     },
@@ -105,7 +141,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+      "version": "3.8.13"
     },
     "vscode": {
       "interpreter": {
