--- a/Unit02/40461_Mod03_3.1.ipynb
+++ b/Unit02/40461_Mod03_3.1.ipynb
@@ -44,11 +44,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New York\n",
+      "Shanghai\n",
+      "Munich\n",
+      "Tokyo\n",
+      "Dubai\n",
+      "Mexico City\n",
+      "São Paulo\n",
+      "Hyderabad\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "cities = [\"New York\", \"Shanghai\", \"Munich\", \"Tokyo\", \"Dubai\", \"Mexico City\", \"São Paulo\", \"Hyderabad\"]\n",
@@ -59,11 +74,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total sales: 124\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "sales = [6, 8, 9, 11, 12, 17, 19, 20, 22]\n",
@@ -85,11 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total sales: 124\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example \n",
     "sales = [6, 8, 9, 11, 12, 17, 19, 20, 22]\n",
@@ -112,41 +143,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tit\n",
+      "seagull\n",
+      "owl\n",
+      "hawk\n",
+      "crow\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create a list of 4 to 6 strings: birds\n",
     "# print each bird in the list\n",
-    "\n"
+    "birds = [\"tit\", \"seagull\", \"owl\", \"hawk\", \"crow\"]\n",
+    "\n",
+    "for b in birds:\n",
+    "    print(b)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "88\n",
+      "10\n",
+      "14\n",
+      "16\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ]  create a list of 7 integers: player_points\n",
     "# [ ] print double the points for each point value\n",
-    "\n"
+    "\n",
+    "player_points = [1,2,3,44,5,7,8]\n",
+    "\n",
+    "for p in player_points:\n",
+    "    print(p*2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tit seagull owl hawk crow \n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] create long_string by concatenating the items in the \"birds\" list previously created\n",
     "# print long_string - make sure to put a space betweeen the bird names\n",
-    "\n"
+    "long_string = \"\"\n",
+    "\n",
+    "for bi in birds:\n",
+    "    long_string += bi + \" \"\n",
+    "    \n",
+    "print(long_string)\n"
    ]
   },
   {
@@ -168,11 +245,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "calcaneus\n",
+      "talus\n",
+      "cuboid\n",
+      "navicular\n",
+      "\n",
+      "lateral cuneiform\n",
+      "intermediate cuneiform\n",
+      "medial cuneiform\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example of sorting into strings to display\n",
     "foot_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \n",
@@ -192,11 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['calcaneus', 'talus', 'cuboid', 'navicular']\n",
+      "['lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example of sorting into lists\n",
     "foot_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\", \n",
@@ -225,29 +327,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Munich', 'Mexico City']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Using cities from the example above iterate throught the list using \"for\"/\"in\"\n",
     "# [ ] Print only cities starting with \"m\"\n",
-    "\n"
+    "mc = []\n",
+    "for c in cities:\n",
+    "    if c.lower().startswith(\"m\"):\n",
+    "        mc.append(c)\n",
+    "\n",
+    "print(mc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Shanghai', 'Dubai', 'São Paulo', 'Hyderabad']\n",
+      "['New York', 'Munich', 'Tokyo', 'Mexico City']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Using cities from the example above iterate throught the list using \"for\"/\"in\"\n",
     "# cities = [\"New York\", \"Shanghai\", \"Munich\", \"Tokyo\", \"Dubai\", \"Mexico City\", \"São Paulo\", \"Hyderabad\"]\n",
     "# [ ] sort into lists with \"A\" in the city name and without \"A\" in the name: a_city & no_a_city\n",
-    "\n"
+    "\n",
+    "a_city = []\n",
+    "no_a_city = []\n",
+    "\n",
+    "for c in cities:\n",
+    "    if \"a\" in c:\n",
+    "        a_city.append(c)\n",
+    "    else:\n",
+    "        no_a_city.append(c)\n",
+    "\n",
+    "print(a_city)\n",
+    "print(no_a_city)"
    ]
   },
   {
@@ -273,11 +408,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total # of \"a\" found in the list is 6\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# iterates the \"cities\" list, count & sum letter \"a\" in each city name\n",
@@ -302,11 +445,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mexico city in default cities is False\n",
+      "mexico city in visitied_cites list is True\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# city_search function has a default list of cities to search\n",
@@ -345,13 +497,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "purple not found in stock\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete paint stock\n",
+    "paint_colours = [\"red\", \"blue\", \"pink\", \"white\", \"black\"]\n",
+    "\n",
+    "colour_request = input(\"colour\")\n",
+    "\n",
+    "def paint_search(p_search):\n",
+    "    for paint in paint_colours:\n",
+    "        if paint.lower() == p_search.lower():\n",
+    "            return \"found\"\n",
+    "        else:\n",
+    "            pass\n",
+    "    return \"not found\"\n",
+    "\n",
+    "print(colour_request, paint_search(colour_request), \"in stock\")\n",
     "\n"
    ]
   },
@@ -378,28 +551,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f is incorrect\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] Complete Foot Bones Quiz\n",
-    "# foot_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\",\n",
-    "#             \"intermediate cuneiform\", \"medial cuneiform\"]\n",
-    "\n"
+    "foot_bones = [\"calcaneus\", \"talus\", \"cuboid\", \"navicular\", \"lateral cuneiform\",\n",
+    "            \"intermediate cuneiform\", \"medial cuneiform\"]\n",
+    "\n",
+    "bone = input(\"bone\")\n",
+    "\n",
+    "def footbone(quiz):\n",
+    "    for b in foot_bones:\n",
+    "        if b.lower() == quiz.lower():\n",
+    "            return \"correct\"\n",
+    "        else:\n",
+    "            pass\n",
+    "    return \"incorrect\"\n",
+    "\n",
+    "print(bone, \"is\", footbone(bone))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "talus correct\n",
+      "['calcaneus', 'cuboid', 'navicular', 'lateral cuneiform', 'intermediate cuneiform', 'medial cuneiform']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] bonus version\n",
-    "\n"
+    "\n",
+    "bone = input(\"bone\")\n",
+    "\n",
+    "def footbone(quiz):\n",
+    "    for b in foot_bones:\n",
+    "        if b.lower() == quiz.lower():\n",
+    "            foot_bones.remove(quiz)\n",
+    "            return \"correct\"\n",
+    "        else:\n",
+    "            pass\n",
+    "    return \"incorrect\"\n",
+    "\n",
+    "print(bone, footbone(bone))"
    ]
   },
   {
@@ -429,7 +642,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13 (default, Oct  4 2022, 14:00:32) \n[GCC 9.4.0]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
