--- a/Unit02/40461_Mod03_3.2.ipynb
+++ b/Unit02/40461_Mod03_3.2.ipynb
@@ -49,11 +49,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "for count in range(10):\n",
@@ -62,11 +79,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "digits = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] \n",
+      "\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# review and run example\n",
     "digits = range(10)\n",
@@ -78,11 +114,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub_total: 0\n",
+      "sub_total: 1\n",
+      "sub_total: 3\n",
+      "sub_total: 6\n",
+      "sub_total: 10\n",
+      "sub_total: 15\n",
+      "sub_total: 21\n",
+      "sub_total: 28\n",
+      "sub_total: 36\n",
+      "sub_total: 45\n",
+      "Total = 45\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "sub_total = 0\n",
@@ -94,11 +148,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuesday\n",
+      "Wednesday\n",
+      "February\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# print the first half of a spelling list\n",
@@ -122,27 +186,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] for x = 6, use range(x) to print the numbers 1 through 6\n",
     "x = 6\n",
+    "total = 1\n",
+    "for c in range(x):\n",
+    "    print(total + c)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5040\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] using range(x) multiply the numbers 1 through 7\n",
     "# 1x2x3x4x5x6x7 = 5040\n",
+    "x = 7\n",
+    "total = 1\n",
+    "for c in range(x):\n",
+    "    total *= (c+1)\n",
+    "print(total)\n",
     "\n"
    ]
   },
@@ -155,16 +248,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Annual\n",
+      "Calendar\n",
+      "Solstice\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print the second half of a spelling list using a range(stop) loop to iterate the list\n",
     "spell_list = [\"Wednesday\", \"Tuesday\", \"February\", \"November\", \"Annual\", \"Calendar\", \"Solstice\"]\n",
     "\n",
-    "\n"
+    "# find length of 1st half of list (must be int)\n",
+    "half_1 = int(len(spell_list)/2)\n",
+    "\n",
+    "for word in range(half_1):\n",
+    "    word += half_1 + 1\n",
+    "    print(spell_list[word])\n"
    ]
   },
   {
@@ -192,11 +300,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "for count in range(5,10):\n",
@@ -205,11 +325,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub_total: 0 + 5 = 5\n",
+      "sub_total: 5 + 6 = 11\n",
+      "sub_total: 11 + 7 = 18\n",
+      "sub_total: 18 + 8 = 26\n",
+      "sub_total: 26 + 9 = 35\n",
+      "sub_total: 35 + 10 = 45\n",
+      "Total = 45\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "sub_total = 0\n",
@@ -223,11 +357,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "November\n",
+      "Annual\n",
+      "Calendar\n",
+      "Solstice\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "\n",
@@ -254,43 +399,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] using range(start,stop), .append() the numbers 5 to 15 to the list: five_fifteen\n",
     "# [ ] print list five_fifteen\n",
-    "\n"
+    "five_fifteen = []\n",
+    "\n",
+    "for c in range(5,16):\n",
+    "    five_fifteen.append(c)\n",
+    "print(five_fifteen)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "February\n",
+      "November\n",
+      "Annual\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] using range(start,stop) - print the 3rd, 4th and 5th words in spell_list\n",
     "# output should include \"February\", \"November\", \"Annual\"\n",
     "spell_list = [\"Tuesday\", \"Wednesday\", \"February\", \"November\", \"Annual\", \"Calendar\", \"Solstice\"]\n",
-    "\n"
+    "\n",
+    "for c in range(2,5):\n",
+    "    print(spell_list[c])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Annual\n",
+      "Calendar\n",
+      "Solstice\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] using code find the index of \"Annual\" in spell_list\n",
     "# [ ] using range, print the spell_list including \"Annual\" to end of list\n",
     "spell_list = [\"Tuesday\", \"Wednesday\", \"February\", \"November\", \"Annual\", \"Calendar\", \"Solstice\"]\n",
-    "\n"
+    "\n",
+    "for x in range(spell_list.index(\"Annual\"),len(spell_list)):\n",
+    "    print(spell_list[x])"
    ]
   },
   {
@@ -319,11 +500,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "50\n",
+      "75\n",
+      "100\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "for count in range(25,101,25):\n",
@@ -332,11 +524,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub_total: 0 + 25 = 25\n",
+      "sub_total: 25 + 30 = 55\n",
+      "sub_total: 55 + 35 = 90\n",
+      "sub_total: 90 + 40 = 130\n",
+      "sub_total: 130 + 45 = 175\n",
+      "Total = 175\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "sub_total = 0\n",
@@ -350,11 +555,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuesday\n",
+      "February\n",
+      "Annual\n",
+      "Solstice\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example printing the 1st and then every other word in spell_list\n",
     "spell_list = [\"Tuesday\", \"Wednesday\", \"February\", \"November\", \"Annual\", \"Calendar\", \"Solstice\"]\n",
@@ -365,11 +581,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example casting range to list\n",
     "odd_list = list(range(1,20,2))\n",
@@ -387,41 +611,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print numbers 10 to 20 by 2's using range\n",
     "\n",
-    "\n"
+    "for n in range(10,21,2):\n",
+    "    print(n)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "19\n",
+      "18\n",
+      "17\n",
+      "16\n",
+      "15\n",
+      "14\n",
+      "13\n",
+      "12\n",
+      "11\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print numbers 20 to 10 using range (need to countdown)\n",
     "# Hint: start at 20\n",
-    "\n"
+    "\n",
+    "for n in range(20,9,-1):\n",
+    "    print(n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tuesday\n",
+      "November\n",
+      "Solstice\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] print first and every third word in spell_list\n",
     "spell_list = [\"Tuesday\", \"Wednesday\", \"February\", \"November\", \"Annual\", \"Calendar\", \"Solstice\"]\n",
-    "\n"
+    "\n",
+    "for index in range(0,len(spell_list),3):\n",
+    "    print(spell_list[index])"
    ]
   },
   {
@@ -442,14 +712,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Odd letters are: ['t', 'o', 'a']\n",
+      "Even letters are: ['h', 'm', 's']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] complete List of letters program- test with the word \"complexity\"\n",
-    "\n"
+    "odd_letter = []\n",
+    "even_letter = []\n",
+    "count = 0\n",
+    "word = input(\"word\")\n",
+    "# find length\n",
+    "length = int(len(word))\n",
+    "# create index lists for odds and evens \n",
+    "odd_in = list(range(0,length,2))\n",
+    "even_in = list(range(1,length,2))\n",
+    "# add letters to list \n",
+    "for l in word:\n",
+    "    if count in odd_in:\n",
+    "        odd_letter.append(l)\n",
+    "        count += 1\n",
+    "    else:\n",
+    "        even_letter.append(l)\n",
+    "        count += 1\n",
+    "\n",
+    "# print lists \n",
+    "print(\"Odd letters are:\", odd_letter)\n",
+    "print(\"Even letters are:\", even_letter)"
    ]
   },
   {
@@ -461,14 +760,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] fix the error printing odd numbers 1 - 9\n",
-    "for num in range[1,10,2]:\n",
+    "for num in range(1,10,2):\n",
     "    print(num)\n",
     "\n",
     "\n"
@@ -499,7 +810,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
