--- a/Unit02/40461_Mod03_3.4.ipynb
+++ b/Unit02/40461_Mod03_3.4.ipynb
@@ -48,11 +48,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STRING: Notebooks can be exported as .pdf\n",
+      "LIST: ['Notebooks', 'can', 'be', 'exported', 'as', '.pdf'] \n",
+      "\n",
+      "Notebooks\n",
+      "can\n",
+      "be\n",
+      "exported\n",
+      "as\n",
+      ".pdf\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "tip = \"Notebooks can be exported as .pdf\"\n",
@@ -67,11 +83,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DOWN\n",
+      "FALLING\n",
+      "IS\n",
+      "BRIDGE\n",
+      "LONDON\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "rhyme = \"London bridge is falling down\"\n",
@@ -81,7 +109,7 @@
     "rhyme_words.reverse()\n",
     "\n",
     "for word in rhyme_words:\n",
-    "    print(word)"
+    "    print(word.upper())"
    ]
   },
   {
@@ -95,28 +123,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jack\n",
+      "and\n",
+      "Jill\n",
+      "went\n",
+      "up\n",
+      "the\n",
+      "hill\n",
+      "To\n",
+      "fetch\n",
+      "a\n",
+      "pail\n",
+      "of\n",
+      "water\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] split the string(rhyme) into a list of words (rhyme_words)\n",
     "# [ ] print each word on it's own line\n",
     "rhyme = 'Jack and Jill went up the hill To fetch a pail of water' \n",
-    "\n"
+    "rhyme_words = rhyme.split()\n",
+    "\n",
+    "for word in rhyme_words:\n",
+    "    print(word)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python\n",
+      "spaces\n",
+      "indentation\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] split code_tip into a list and print the first and every other word\n",
     "code_tip = \"Python uses spaces for indentation\"\n",
+    "#create list\n",
+    "code_tip_split = code_tip.split()\n",
+    "\n",
+    "\n",
+    "for word in range(0,len(code_tip_split),2):\n",
+    "    print(code_tip_split[word])\n",
     "\n"
    ]
   },
@@ -143,11 +210,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Python', 'uses', 'spaces', 'for', 'indentation']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "code_tip = \"Python-uses-spaces-for-indentation\"\n",
@@ -158,11 +233,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python uses spaces for indentation\n",
+      "['Python uses sp', 'ces for indent', 'tion']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example - study the list print output\n",
     "code_tip = \"Python uses spaces for indentation\"\n",
@@ -175,11 +259,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Jack and Jill went up the hill', 'To fetch a pail of water', 'Jack fell down and broke his crown', 'And Jill came tumbling after'] \n",
+      "\n",
+      "And Jill came tumbling after\n",
+      "Jack fell down and broke his crown\n",
+      "To fetch a pail of water\n",
+      "Jack and Jill went up the hill\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# triple quotes ''' ''' preserve formatting such as spaces and line breaks\n",
@@ -208,15 +305,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Write Code Frequently\n",
+      "Save Code Frequently\n",
+      "Comment Code Frequently\n",
+      "Study Code Frequently\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] split poem into a list of phrases by splitting on \"*\" a\n",
     "# [ ] print each phrase on a new line in title case\n",
-    "poem = \"Write code frequently*Save code frequently*Comment code frequently*Study code frequently*\"\n"
+    "poem = \"Write code frequently*Save code frequently*Comment code frequently*Study code frequently*\"\n",
+    "phrases = poem.split(\"*\")\n",
+    "\n",
+    "for words in phrases:\n",
+    "    print(words.title())"
    ]
   },
   {
@@ -532,7 +645,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
