--- a/Unit02/40461_Mod02_Practice2.ipynb
+++ b/Unit02/40461_Mod02_Practice2.ipynb
@@ -26,23 +26,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# [ ] create and populate list called days_of_week then print it\n",
-    "\n"
+    "\n",
+    "days_of_week = [\"monday\", \"tuesday\", \"wednesday\", \"thursday\", \"friday\", \"saturday\", \"sunday\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tuesday\n",
+      "thursday\n",
+      "saturday\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] after days_of_week is run above, print the days in the list at odd indexes 1,3,5\n",
     "\n",
@@ -375,7 +386,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "9ac03a0a6051494cc606d484d27d20fce22fb7b4d169f583271e11d5ba46a56e"
+   }
   }
  },
  "nbformat": 4,
